api: 显示所有应用状态信息
